--- a/src/stylesheets/typography/_typography-headings.scss
+++ b/src/stylesheets/typography/_typography-headings.scss
@@ -26,7 +26,7 @@ h6,
 /// for semantic classes for visual styling.
 /// @since 0.1.0
 @mixin h1 {
-  @include font(h1, $line-height: 3, $below: 1);
+  @include font(h1, $line-height: 3);
   font-weight: 700;
 }
 
@@ -34,7 +34,7 @@ h6,
 /// for semantic classes for visual styling.
 /// @since 0.1.0
 @mixin h2 {
-  @include font(h2, $line-height: 2.5, $below: 1);
+  @include font(h2, $line-height: 2.5);
   font-weight: 700;
 }
 
@@ -42,7 +42,7 @@ h6,
 /// for semantic classes for visual styling.
 /// @since 0.1.0
 @mixin h3 {
-  @include font(h3, $line-height: 2.25, $below: 1);
+  @include font(h3, $line-height: 2.25);
   font-weight: 700;
 }
 
@@ -50,7 +50,7 @@ h6,
 /// for semantic classes for visual styling.
 /// @since 0.1.0
 @mixin h4 {
-  @include font(h4, $line-height: 2, $below: 1);
+  @include font(h4, $line-height: 2);
   font-weight: 700;
 }
 
@@ -58,7 +58,7 @@ h6,
 /// for semantic classes for visual styling.
 /// @since 0.1.0
 @mixin h5 {
-  @include font(h5, $line-height: 1.8, $below: 0);
+  @include font(h5, $line-height: 1.8);
   font-weight: 700;
 }
 
@@ -66,7 +66,7 @@ h6,
 /// for semantic classes for visual styling.
 /// @since 0.1.0
 @mixin h6 {
-  @include font(h6, $line-height: 1.6, $below: 0);
+  @include font(h6, $line-height: 1.6);
   font-weight: 700;
 }
 
