--- a/src/stylesheets/helpers/_helpers-utils.scss
+++ b/src/stylesheets/helpers/_helpers-utils.scss
@@ -12,12 +12,12 @@
 
 /// Convert pixel-values to em-values.
 /// @param {Number} $pixels - The px-value you wish to convert to ems. No px unit necessary (e.g. 20 is fine, so is 20px). Passing a list will result in a list of em values (see examples).
-/// @param {Number} $base [$base-font-size] - A base-value with which to calculate the em-value
+/// @param {Number} $base [$nice-base-font-size] - A base-value with which to calculate the em-value
 /// @since 0.2.0
 /// @link https://davidtheclark.github.io/scut/em.html
 @function em (
   $pixels,
-  $base: $base-font-size
+  $base: $nice-base-font-size
 ) {
 
   // $base could be in em or px (no unit = px).
@@ -40,5 +40,31 @@
   @else {
     @return $em-vals;
   }
+}
 
+
+/// Convert pixel-values to rem-values.
+/// @param {Number} $pixels - The px-value you wish to convert to rems. No px unit necessary (e.g. 20 is fine, so is 20px). Passing a list will result in a list of rem values (see examples).
+/// @param {Number} $base [$nice-base-font-size] - A base-value with which to calculate the em-value
+/// @since 0.2.0
+/// @link https://davidtheclark.github.io/scut/rem.html
+@function rem (
+  $pixels,
+  $base: $nice-base-font-size
+) {
+
+  $rem-vals: ();
+  @each $val in $pixels {
+    $val-in-rems: strip-unit($val) / $base * 1rem;
+    $rem-vals: append($rem-vals, $val-in-rems);
+  }
+
+  @if length($rem-vals) == 1 {
+    // return a single value instead of a list,
+    // so it can be used in calculations
+    @return nth($rem-vals, 1);
+  }
+  @else {
+    @return $rem-vals;
+  }
 }
