Update alpha colour to meet AA colour contrast

--- a/src/stylesheets/settings/_settings-colours.scss
+++ b/src/stylesheets/settings/_settings-colours.scss
@@ -135,7 +135,7 @@ $colour-discovery: #b8008e;
 
 /// Alpha badges and banners
 /// @since 0.2.0
-$colour-alpha: #d53880;
+$colour-alpha: #d5367f;
 
 /// Beta badges and banners
 /// @since 0.2.0
