--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -24,7 +24,7 @@
   }
 
   p {
-    @include font-size(-1, 1.6);
+    @include font-size(-1);
   }
 
   &__logo {
@@ -104,7 +104,7 @@
     }
 
     a {
-      @include font-size(-1, 1.3);
+      @include font-size(-1);
       color: $colour-grey-3;
       display: block;
       padding: em(8 0);
@@ -146,6 +146,7 @@
 
     .icon {
       @include font-size(6);
+      line-height: 1;
       display: block;
       margin: 0 auto em(4px);
 
@@ -182,6 +183,7 @@
 
     .icon {
       @include font-size(4);
+      line-height: 1;
     }
   }
 
