--- a/src/stylesheets/components/_components-buttons.scss
+++ b/src/stylesheets/components/_components-buttons.scss
@@ -6,7 +6,7 @@
 /// @since 0.1.0
 .btn {
   @include remove-mz-focus-inner;
-  @include font-size(0, 2.5);
+  @include font-size(0);
   appearance: none;
   background: $colour-dark-grey;
   border: 0;
@@ -61,7 +61,7 @@
   }
 
   &--prominent {
-    @include font-size(2, 4);
+    @include font-size(2);
     padding: 0 em(20);
     background: $colour-purple;
     border: 1px solid $colour-nice-white;
