--- a/src/stylesheets/settings/_settings-colours.scss
+++ b/src/stylesheets/settings/_settings-colours.scss
@@ -91,7 +91,7 @@ $colour-teal-3: #15434a;
 
 /// Page background colour
 /// @since 0.2.0
-$colour-page: $colour-nice-white;
+$colour-page: #fafafa;
 
 /// Link text colour
 /// @since 0.2.0
