--- a/src/stylesheets/components/_components-breadcrumbs.scss
+++ b/src/stylesheets/components/_components-breadcrumbs.scss
@@ -8,8 +8,8 @@
 .breadcrumbs {
   @include font-size(0);
   list-style: none;
-  margin: 0;
-  padding: em(12 0);
+  margin: em(0 0 $spacing-large);
+  padding: 0;
 
   &__crumb {
     display: inline-block;
