--- a/src/stylesheets/components/_components-phase.scss
+++ b/src/stylesheets/components/_components-phase.scss
@@ -15,13 +15,13 @@
 .phase-banner {
   border-bottom: 1px solid $colour-border;
   display: table;
-  margin: 0 0 em(24);
-  padding: em(4) 0;
+  margin: em(0 0 $spacing-large);
+  padding: em($spacing-x-small 0);
   width: 100%;
 
   &__tag {
     display: table-cell;
-    padding: 0 em(8) 0 0;
+    padding: em(0 $spacing-small 0 0);
   }
 
   &__label {
@@ -46,12 +46,13 @@
 /// @see .phase-banner
 /// @since 0.1.0
 .phase-tag {
+  @include font-size(-1);
   background-color: $colour-grey-1;
   color: $colour-nice-white;
   display: inline-block;
-  font-weight: 700;
+  font-weight: 900;
   letter-spacing: 1px;
-  padding: 0 .3rem;
+  padding: em($spacing-xx-small $spacing-small);
   text-decoration: none;
   text-transform: uppercase;
   vertical-align: middle;
