--- a/css/app.scss
+++ b/css/app.scss
@@ -6,7 +6,7 @@
 @charset 'utf-8';
 
 // NICE overrides
-$nice-font-base-path: '/nice-experience/fonts/';
+$nice-font-base-path: '/NICE-Experience/fonts/';
 
 // Experience
 @import 'experience';
