Add "edit this page" link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,5 +3,13 @@ layout: master
 ---
 
 <div class="container">
+
 	{{ content }}
+
+	<p class="text-right">
+		<a href="{{ site.repository }}/edit/gh-pages/{{ page.path }}" target="_blank">
+			Edit on GitHub
+		</a>
+	</p>
+
 </div>
