--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -118,7 +118,30 @@ layout: master
 		</aside>
 
 		<article class="page__main" role="main">
+
+			<div class="grid grid--rev">
+				<div data-g="12 md:3" class="text-right">
+					<p>
+						<a href="{{ site.repository }}/edit/gh-pages/{{ page.path }}" target="_blank">
+							Edit on GitHub
+						</a>
+					</p>
+				</div>
+				<div data-g="12 md:9">
+					<h1>
+						{{ page.title }}
+					</h1>
+				</div>
+			</div>
+
 			{{ content }}
+
+			<p class="text-right">
+				<a href="{{ site.repository }}/edit/gh-pages/{{ page.path }}" target="_blank">
+					Edit on GitHub
+				</a>
+			</p>
+
 		</article>
 
 		{% unless page.inpagenav == false %}
