--- a/_sass/components/_components-colour-grid.scss
+++ b/_sass/components/_components-colour-grid.scss
@@ -45,7 +45,7 @@
   
      // Notifications & borders
       
-    &--alphabeta:before { background: #FFFFFF; }
+    &--alphabeta:before { background: #009ae9; }
     &--errortext:before { background:#B10E1E; }
     &--errorbg:before { background: #EAC3C3; }   
     &--cautiontxt:before { background: #9B722F; }
